Ensure external link icon shows up in high contrast mode

--- a/www/styles/chunks/_external-link.scss
+++ b/www/styles/chunks/_external-link.scss
@@ -5,5 +5,9 @@
   &__icon > svg {
     height: 0.8em;
     width: 0.8em;
+
+    @media (forced-colors: active) {
+      color: LinkText;
+    }
   }
 }
